syntax = "proto3";

package gaia.schema;

option go_package = "protograph";

message SingleEdge {
    string edge_label = 1;
    string destination_label = 2;
}

message RepeatedEdges {
    string edge_label = 1;
    string destination_label = 2;
}

message EmbeddedEdges {
    string edge_label = 1;
    string destination_label = 2;
    string embedded_in = 3;
}

message RenameProperty {
    string rename = 1;
}

message SerializeField {
    string serialized_name = 1;
}

message SpliceMap {
    string prefix = 1;
}

message InnerVertex {
    string edge_label = 1;
    string destination_label = 2;
    string outer_id = 3;
}

message JoinList {
    string delimiter = 1;
}

message StoreField {
    bool store = 1;
}

message FieldAction {
    string field = 1;
    oneof action {
        SingleEdge single_edge = 3;
        RepeatedEdges repeated_edges = 4;
        EmbeddedEdges embedded_edges = 5;
        RenameProperty rename_property = 6;
        SerializeField serialize_field = 7;
        SpliceMap splice_map = 8;
        InnerVertex inner_vertex = 9;
        JoinList join_list = 10;
        StoreField store_field = 11;
    }
}

message TransformMessage {
    string label = 1;
    string gid = 2;
    repeated FieldAction actions = 3;
}